--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile project(':react-native-vector-icons')
     implementation project(':react-native-maps')
+    compile project(':react-native-image-picker')
 }
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
